# simd-kd-tree

./: CMakeLists.txt  LICENSE  README.md  kdtree.h  linearsearch.h  main.cpp  point.h  simdize.h  test.cpp  tsc.h
